--- a/projeto/FrontendEasyfinance/src/app/despesa/despesa.component.html
+++ b/projeto/FrontendEasyfinance/src/app/despesa/despesa.component.html
@@ -1,1 +1,50 @@
-<p>despesa works!</p>
+<div class="row justify-content-md-center mt-5">
+	<div class="col-8 align-self-center">
+		<h1>Despesas</h1>
+	</div>
+</div>
+
+
+<div class="row justify-content-md-center">
+	<div class="col-8">
+		
+			<table mat-table [dataSource]="dataSource" class="mat-evelation-z8" width="100%">
+
+			<ng-container matColumnDef="id">
+				<th mat-header-cell *matHeaderCellDef>No.</th>
+				<td mat-cell *matCellDef="let despesa">{{despesa.id}}</td>
+			</ng-container>
+
+			<ng-container matColumnDef="year">
+				<th mat-header-cell *matHeaderCellDef>Ano</th>
+				<td mat-cell *matCellDef="let despesa">{{despesa.year}}</td>
+			</ng-container>
+
+			<ng-container matColumnDef="month">
+				<th mat-header-cell *matHeaderCellDef>Mês</th>
+				<td mat-cell *matCellDef="let despesa">{{despesa.month}}</td>
+			</ng-container>
+
+			<ng-container matColumnDef="day">
+				<th mat-header-cell *matHeaderCellDef>Dia</th>
+				<td mat-cell *matCellDef="let despesa">{{despesa.day}}</td>
+			</ng-container>
+
+			<ng-container matColumnDef="category">
+				<th mat-header-cell *matHeaderCellDef>Categoria</th>
+				<td mat-cell *matCellDef="let despesa">{{despesa.category}}</td>
+			</ng-container>
+
+			<ng-container matColumnDef="value">
+				<th mat-header-cell *matHeaderCellDef>Valor</th>
+				<td mat-cell *matCellDef="let despesa">{{despesa.value}}</td>
+			</ng-container>
+
+
+			<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+			<tr mat-row *matRowDef="let despesa; columns: displayedColumns"></tr>
+		</table>
+
+	</div>
+</div>
+
