--- a/projeto/FrontendEasyfinance/src/app/despesa/despesa.component.html
+++ b/projeto/FrontendEasyfinance/src/app/despesa/despesa.component.html
@@ -1,6 +1,10 @@
 <div class="row justify-content-md-center mt-5">
-	<div class="col-8 align-self-center">
+	<div class="col-6 align-self-center">
 		<h1>Despesas</h1>
+	</div>
+
+	<div class="col-2 align-self-center">
+		<button mat-stroked-button class="float-right" color="primary" (click)="openNewDialog()">Adicionar</button>
 	</div>
 </div>
 
