--- a/projeto/FrontendEasyfinance/src/app/despesa/despesa.component.html
+++ b/projeto/FrontendEasyfinance/src/app/despesa/despesa.component.html
@@ -44,6 +44,14 @@
 				<td mat-cell *matCellDef="let despesa">{{despesa.value}}</td>
 			</ng-container>
 
+			<ng-container matColumnDef="acoes">
+				<th mat-header-cell *matHeaderCellDef></th>
+				<td mat-cell *matCellDef="let despesa">
+					<button mat-stroked-button class="float-right" color="primary" (click)="openEditDialog(despesa)">Editar</button>
+					<button mat-stroked-button class="float-right" color="primary" (click)="excluir(despesa)">Remover</button>
+				</td>
+			</ng-container>
+
 
 			<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
 			<tr mat-row *matRowDef="let despesa; columns: displayedColumns"></tr>
